# traffic-ops-core

./: .env.example  .gitignore  README.md  pyproject.toml
data/: affiliate_keywords.csv  affiliate_products.json  haro_ledger_template.csv  indexing_baseline.json  indexing_census_2026-06-15.json  indexing_census_2026-07-01.json  indexing_census_2026-07-15.json
docs/: AUTONOMOUS-OPERATIONS.md  CODE-SPEC.md  CONTENT-DIVERSITY-STRATEGY.md  CONTENT-VELOCITY.md  CREDENTIALS-SETUP.md  HARO_PLAYBOOK.md  HUMAN-RUNBOOK.md  INDEXING_WORKLIST.md  INFRASTRUCTURE.md  MULTI-GAME-STRATEGY.md  NEW-SITE-PLAYBOOK.md  NEW-SITE-SETUP.md  PERFORMANCE-OPTIMIZATION.md  PHASE-1A-COMPLETION-REPORT.md  PHASE-1B-COMPLETION-REPORT.md  PHASE-2.2-REWRITER.md  PIXELMATCH-STRATEGY.md  PRD-AI-Site-Operator.md  QDF_PLAYBOOK.md  SEO-FEEDBACK-LOOP.md  SITE-STRUCTURE.md
scripts/: _keyword_entity_verify.py  backfill_one_under_imaged.py  backfill_tier_classification.py  bootstrap_first_site.py  bootstrap_imade4u.py  bootstrap_new_site.py  bootstrap_quvii.py  check_mobile_responsive.py  check_publish_streak.py  cleanup_quvii_pollution.py  content_imade4u.py  ctr_optimizer.py  daily_indexing_worklist.py  daily_retro.py  external_kw_report.py  finalize_stuck_articles.py  fix_article_content.py  footprint_report.py  gen_quvii_brand_images.py  gen_quvii_brand_retry.py  gift_keywords.py  gift_sample.py  index_coverage.py  indexing_census.py  indexnow_submit.py  ingest_affiliate_keywords.py  ingest_external_keywords.py  inject_ads_to_existing.py  inject_site_env.py  keyword_difficulty.py  keyword_gardener.py  (+37 more)
(+89 files in other folders)
