# google-genai (NOT google-generativeai) — new unified SDK introduced 2024
# Migration guide: https://ai.google.dev/gemini-api/docs/migrate

[project]
name = "traffic-ops-core"
version = "0.2.0"
description = "AI Site Operator — backend pipeline, data collectors, agents."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "supabase>=2.0",
    "httpx>=0.27",
    "google-genai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
